<resources>
    <string name="app_name">Perdido y Hallado</string>
    <string name="logo_de_la_aplicacion">logo de la aplicación</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="Registrarse">Registrarse</string>
    <string name="atras">Atrás</string>
    <string name="icono_de_una_persona">Ícono de una persona</string>
    <string name="ingrese_su_correo">Ingrese su correo</string>
    <string name="escribe_tu_contrase_a">Escribe tu contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="repetir_contrase_a">Repetir contraseña</string>
    <string name="numero_telefono">Número Teléfono</string>
    <string name="boton_forma_de_casa">Botón forma de casa</string>
    <string name="boton_forma_lupa">Botón forma lupa</string>
    <string name="boton_forma_usuario">Botón forma usuario</string>
    <string name="perdido">Perdido</string>
    <string name="encontrado">Encontrado</string>
    <string name="mis_publicaciones">Mis Publicaciones</string>
    <string name="guardado">Guardado</string>
    <string name="editar_cuenta">Editar Cuenta</string>
    <string name="salir">Salir</string>
    <string name="boton_circular">Botón circular</string>
    <string name="publicar">Publicar</string>
    <string name="nombre_objeto">Nombre Objeto</string>
    <string name="descripcion_objeto">Descripción Objeto</string>
    <string name="donde">Dónde</string>
    <string name="busqueda">Búsqueda</string>
    <string name="guardar">Guardar</string>
</resources>
