<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity3">

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="158dp"
        android:background="@color/verde1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="text"
        android:textColorHint="@color/black"
        android:padding="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.278" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/apellido"
        android:inputType="text"
        android:textColorHint="@color/black"
        android:padding="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.388" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/black"
        android:padding="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/repetir_contrase_a"
        android:inputType="textPassword"
        android:textColorHint="@color/black"
        android:padding="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.725" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/numero_telefono"
        android:inputType="phone"
        android:textColorHint="@color/black"
        android:padding="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.837" />

    <Button
        android:id="@+id/button5"
        android:layout_width="102dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/verde2"
        android:text="@string/atras"
        android:textColor="@color/black"
        app:cornerRadius="@dimen/cardview_default_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="144dp"
        android:layout_height="58dp"
        android:backgroundTint="@color/verde2"
        android:text="@string/entrar"
        android:textColor="@color/black"
        app:cornerRadius="@dimen/cardview_default_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.955"
        app:strokeWidth="1dp" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:textColorHint="@color/black"
        android:padding="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.614" />
</androidx.constraintlayout.widget.ConstraintLayout>