<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/usuario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Usuario">

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/verde1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.998" />

    <View
        android:id="@+id/view4"
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        android:background="@color/verde1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="91dp"
        android:layout_height="72dp"
        android:background="@color/verde1"
        android:contentDescription="@string/boton_forma_de_casa"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975"
        app:srcCompat="@drawable/casa1" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="88dp"
        android:layout_height="74dp"
        android:background="@color/verde1"
        android:contentDescription="@string/boton_forma_lupa"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975"
        app:srcCompat="@drawable/lupa1" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="81dp"
        android:layout_height="79dp"
        android:background="@color/verde1"
        android:contentDescription="@string/boton_forma_usuario"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.915"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.986"
        app:srcCompat="@drawable/usuario2" />

    <Button
        android:id="@+id/button9"
        android:layout_width="190dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/gris"
        android:text="@string/mis_publicaciones"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:cornerRadius="@dimen/cardview_default_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.272"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/button12"
        android:layout_width="190dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/gris"
        android:text="@string/salir"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:cornerRadius="@dimen/cardview_default_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.717"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/button11"
        android:layout_width="190dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/gris"
        android:text="@string/editar_cuenta"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:cornerRadius="@dimen/cardview_default_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.573"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/button10"
        android:layout_width="190dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/gris"
        android:text="@string/guardado"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:cornerRadius="@dimen/cardview_default_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.425"
        app:strokeWidth="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>