<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/agregar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Agregar">
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/verde1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/verde2"
        android:text="@string/atras"
        android:textColor="@color/black"
        app:cornerRadius="@dimen/cardview_default_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036"
        app:strokeWidth="1dp" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:inputType="text"
        android:hint="@string/nombre_objeto"
        android:textColorHint="@color/black"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301" />

    <Button
        android:id="@+id/button14"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/gris"
        android:text="@string/encontrado"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:cornerRadius="@dimen/cardview_default_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.808"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/button13"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/verde1"
        android:text="@string/perdido"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:cornerRadius="@dimen/cardview_default_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.171"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16"
        app:strokeWidth="1dp" />

    <EditText
        android:id="@+id/editTextText7"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:inputType="text"
        android:hint="@string/donde"
        android:textColorHint="@color/black"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.551" />

    <EditText
        android:id="@+id/editTextText5"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:ems="10"
        android:gravity="center_horizontal|center_vertical"
        android:inputType="text"
        android:hint="@string/descripcion_objeto"
        android:textColorHint="@color/black"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.429" />

    <Button
        android:id="@+id/button15"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/verde1"
        android:text="@string/publicar"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:cornerRadius="@dimen/cardview_default_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.934"
        app:layout_constraintWidth_percent="0.4"
        app:strokeWidth="1dp" />

    <ImageButton
        android:id="@+id/mostrar"
        android:layout_width="241dp"
        android:layout_height="129dp"
        android:background="@color/gris"
        android:contentDescription="Seleccionar imagen"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.76" />


</androidx.constraintlayout.widget.ConstraintLayout>